[package]
name = "starknet_contract_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.56"
hex = "0.4"
serde_json = "1.0"
bs58 = "0.5.1"
serde = "1.0.211"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.9", features = ["abigen-rs"] }
starknet-crypto = "0.7.1"