[package]
name = "starknet_contract_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.2", features = ["abigen-rs"] }
starknet = "0.12.0"
starknet-crypto = "0.7.2"
tokio = { version = "1.41.0", features = ["full"] }
